@@ -1,3 +1,7 @@
+[B]1.2.1[/B] - 12-06-2018
+- Do not allow addition to history when empty string given
+- Fixed removal of new line when removing individual links
+
 [B]1.2.0[/B] - 10-06-2018
 - Added headers append into stream url when custom args are present in streamlink's stream object
 - Replaced .url property with to_url function call
